# aot-compiler-wrapper

./: .gitignore  README.md  blue_print.txt  pyproject.toml  requirements.txt
edge_aot_compiler/: __init__.py  __main__.py  cli.py
edge_aot_compiler/core/: __init__.py  analyzer.py  calibrator.py  compiler_base.py  packager.py  sdk_manager.py
edge_aot_compiler/edge_runtime/: MyEngine.cpp  MyEngine.h
edge_aot_compiler/plugins/: __init__.py  mediatek_apu.py  qualcomm_htp.py  qualcomm_lpai.py
test/output/: pre_compile_topology.json
