[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-aot-compiler"
version = "0.1.0"
description = "Transparent AOT Compiler Wrapper for edge AI deployment"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "onnx>=1.14",
    "numpy>=1.24",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
edge-aot-compiler = "edge_aot_compiler.cli:main"

[tool.setuptools.packages.find]
include = ["edge_aot_compiler*"]

[tool.ruff]
line-length = 100
target-version = "py310"
